--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npx parcel app/index.html",
+    "chain": "npx ganache-cli",
+    "server": "node app/server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,10 +18,16 @@
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.2.0",
     "ethers": "^5.0.19",
+    "ganache-cli": "^6.12.2",
     "hardhat": "^2.0.2",
+    "parcel": "^1.12.4",
     "sass": "^1.29.0"
   },
   "browserslist": [
     "> 5%"
-  ]
+  ],
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
+  }
 }
